--- a/index.html
+++ b/index.html
@@ -101,6 +101,91 @@
 
       <!-- MAIN  @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
       <main class="container-fluid" id="main">
+
+
+        <!-- ARTICLES  @@@///@@@@@@@@//@@@@@//@@@@/@-->
+
+        <section class="presentation">
+
+          <h2 class="h1">Pésentation</h2>
+
+          <div>
+            <div class="container-fluid">
+                    <div class="row">
+
+                        <!-- ARTICLE 1 -->
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art1.jpg">
+                                <div class="card-block">
+                                    <h4 class="card-title">STEP 1</h4>
+                                    <div class="meta">
+                                        <a href="#"></a>
+                                    </div>
+                                    <div class="card-text">
+                                        Prenez un cours <strong>particulier</strong> avec un de nos coach expert
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <span><i class=""></i>Choisir son <strong>coach</strong></span>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- ARTICLE 2 -->
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art2.jpg">
+                                <div class="card-block">
+                                    <h4 class="card-title">STEP 2</h4>
+                                    <div class="meta">
+                                        <a href="#"></a>
+                                    </div>
+                                    <div class="card-text">
+                                        Travaillez à <strong>votre</strong> rythme selon <strong>vos</strong> disponibilités
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <span><i class=""></i>Atteindre son <strong>objectif</strong></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- ARTICLE 3 -->
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art3.jpg">
+                                <div class="card-block">
+                                    <h4 class="card-title">STEP 3</h4>
+                                    <div class="meta">
+                                        <a href="#"></a>
+                                    </div>
+                                    <div class="card-text">
+                                        Maintenez votre <strong>forme</strong> seul avec les cours reçus avec nous
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <span><i class=""></i>Maintenir la <strong>forme</strong></span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+            </div>
+
+          </div><!-- fin articles -->
+
+          <blockquote class="blockquote col-lg-8 col-md-8 offset-md-2 offset-lg-2">
+            <p>
+              <strong class="h1">Besoin d'aide pour atteindre vos objectifs ?</strong><br> Offrez-vous les services de Fitness & U, un coach sportif professionnel qui propose ses services en salle ou à domicile proche de Lille.<br>
+
+            </p>
+          </blockquote>
+        </section>
+
+
         <!-- CAROUSEL  @@@///@@@@@@@@//@@@@@//@@@@/@-->
 
         <section class="container">
@@ -146,88 +231,6 @@
             </div>
 
           </div>
-        </section>
-
-        <!-- ARTICLES  @@@///@@@@@@@@//@@@@@//@@@@/@-->
-
-        <section class="presentation">
-
-          <h2>Pésentation</h2>
-          <blockquote class="blockquote">
-            <p>
-            Besoin d'aide pour atteindre vos objectifs ? Offrez-vous les services de Fitness & U, un coach sportif professionnel qui propose ses services en salle ou à domicile proche de Lille.<br>
-            Intervenant aussi bien sur le plan physique que mental, les coach sportif à domicile qualifié de Fitness & U peuvent également donner d'excellents conseils nutritionnels. Il est en mesure de vous aider à perdre du poids et à tonifier vos muscles.
-            </p>
-          </blockquote>
-
-          <div>
-            <div class="container-fluid">
-                    <div class="row">
-
-                        <!-- ARTICLE 1 -->
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img class="card-img-top" alt="coach" src="img/desktop/art1.jpg">
-                                <div class="card-block">
-                                    <h4 class="card-title">STEP 1</h4>
-                                    <div class="meta">
-                                        <a href="#"></a>
-                                    </div>
-                                    <div class="card-text">
-                                        Prenez un cours <strong>particulier</strong> avec un de nos coach exepert
-                                    </div>
-                                </div>
-                                <div class="card-footer">
-                                    <span><i class=""></i>Choisir sont <strong>coach</strong></span>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <!-- ARTICLE 2 -->
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img class="card-img-top" alt="coach" src="img/desktop/art2.jpg">
-                                <div class="card-block">
-                                    <h4 class="card-title">STEP 2</h4>
-                                    <div class="meta">
-                                        <a href="#"></a>
-                                    </div>
-                                    <div class="card-text">
-                                        Travaillez à <strong>votre</strong> rythme selon <strong>vos</strong> disponibilités
-                                    </div>
-                                </div>
-                                <div class="card-footer">
-                                    <span><i class=""></i>Atteindre sont <strong>objectif</strong></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- ARTICLE 3 -->
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img class="card-img-top" alt="coach" src="img/desktop/art3.jpg">
-                                <div class="card-block">
-                                    <h4 class="card-title">STEP 3</h4>
-                                    <div class="meta">
-                                        <a href="#"></a>
-                                    </div>
-                                    <div class="card-text">
-                                        Maintenez votre <strong>forme</strong> seul avec les cours reçus avec nous
-                                    </div>
-                                </div>
-                                <div class="card-footer">
-                                    <span><i class=""></i>Maintenir la <strong>forme</strong></span>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-            </div>
-
-          </div><!-- fin articles -->
-
         </section>
       </main>
 
