Add home picture& h1

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
         </div>
       </header>
 
+
+      <figure class="homepic">
+        <img src="img/desktop/home.jpg" srcet="img/phone/home.jpg 400w , img/desktop/home.jpg 750w" alt="home picture">
+        <h1>Fitness & U <br> <span>Coach sportif pour tous</span></h1>
+      </figure>
+
       <!-- MAIN  @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
       <main class="container-fluid" id="main">
 
@@ -116,7 +122,7 @@
                         <!-- ARTICLE 1 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" alt="coach" src="img/desktop/art1.jpg">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art1.jpg" srcset="img/phone/art1.jpg 400w, img/desktop/art1.jpg 750w" >
                                 <div class="card-block">
                                     <h4 class="card-title">STEP 1</h4>
                                     <div class="meta">
@@ -136,7 +142,7 @@
                         <!-- ARTICLE 2 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" alt="coach" src="img/desktop/art2.jpg">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art2.jpg" srcset="img/phone/art2.jpg 400w, img/desktop/art2.jpg 750w">
                                 <div class="card-block">
                                     <h4 class="card-title">STEP 2</h4>
                                     <div class="meta">
@@ -155,7 +161,7 @@
                         <!-- ARTICLE 3 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" alt="coach" src="img/desktop/art3.jpg">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art3.jpg" srcset="img/phone/art3.jpg 400w, img/desktop/art3.jpg 750w">
                                 <div class="card-block">
                                     <h4 class="card-title">STEP 3</h4>
                                     <div class="meta">
@@ -176,14 +182,14 @@
             </div>
 
           </div><!-- fin articles -->
-
+<hr>
           <blockquote class="blockquote col-lg-8 col-md-8 offset-md-2 offset-lg-2">
             <p>
               <strong class="h1">Besoin d'aide pour atteindre vos objectifs ?</strong><br> Offrez-vous les services de Fitness & U, un coach sportif professionnel qui propose ses services en salle ou à domicile proche de Lille.<br>
 
             </p>
           </blockquote>
-        </section>
+<hr>        </section>
 
 
         <!-- CAROUSEL  @@@///@@@@@@@@//@@@@@//@@@@/@-->
