--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,12 +45,12 @@
 
           <nav class="navbar navbar-toggleable-md navbar-light bg-faded col-12">
 
-            <button class="navbar-toggler navbar-toggler-right col-2" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right col-2" tabindex="-1" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-10" href="#">Fitness & U</a>
+            <a class="navbar-brand col-10" href="../index.html">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
@@ -79,7 +79,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-md-8" href="#">Fitness & U</a>
+            <a class="navbar-brand col-md-8" href="../index.html">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse col-md-3 nav" id="nav-content">
@@ -215,7 +215,7 @@
             <div class="row">
 
               <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.45292102593!2d3.189737150990074!3d50.67441737940634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3287cf91e104f%3A0xa6ae6585f5725be4!2sA.D.E.P.!5e0!3m2!1sfr!2sfr!4v1495094118165" width="800" height="400" style="border:0" allowfullscreen></iframe>
-              
+
             </div>
 
         </section>
@@ -232,7 +232,7 @@
         <div class="row">
 
           <!-- COACH 1 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach1.jpg">
                   <div class="card-block">
@@ -246,14 +246,14 @@
                   </div>
                   <div class="card-footer">
                       <small>Voir les disponibilités</small>
-                      <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                      <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                   </div>
               </div>
           </div>
 
 
           <!-- COACH 2 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach2.jpg">
                   <div class="card-block">
@@ -266,7 +266,7 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                     <small>Voir les disponibilités</small>
                   </div>
               </div>
@@ -275,7 +275,7 @@
 
 
           <!-- COACH 3 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach3.jpg">
                   <div class="card-block">
@@ -288,7 +288,7 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                     <small>Voir les disponibilités</small>
                   </div>
               </div>
@@ -297,7 +297,7 @@
 
 
           <!-- COACH 4 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach4.jpg">
                   <div class="card-block">
@@ -310,7 +310,7 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                     <small>Voir les disponibilités</small>
                   </div>
               </div>
