--- a/pages/tarif.html
+++ b/pages/tarif.html
@@ -45,12 +45,12 @@
 
           <nav class="navbar navbar-toggleable-md navbar-light bg-faded col-12">
 
-            <button class="navbar-toggler navbar-toggler-right col-2" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right col-2" tabindex="-1" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-10" href="#">Fitness & U</a>
+            <a class="navbar-brand col-10" href="../index.html">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
@@ -111,7 +111,7 @@
           <div>
             <div class="container">
             	<div class="row">
-        				<div class="col-md-3 card">
+        				<div class="col-md-3 card tarifcard">
         						<div class="panel panel-danger">
         								<div class="panel-heading">
         										<h3 class="text-center">Petite <br> formule</h3>
@@ -128,13 +128,13 @@
         												<span class="glyphicon glyphicon-envelope"></span>2 jours par semaines
         										</li>
         										<li class="list-group-item">
-        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br>non-accompagné
+        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br>libre
         										</li>
         								</ul>
-        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-success" href="#">ACHETER</a> </div>
         						</div>
         				</div>
-        				<div class="col-md-3 card">
+        				<div class="col-md-3 card tarifcard">
         						<div class="panel panel-info">
         								<div class="panel-heading">
         										<h3 class="text-center">Moyenne <br> formule</h3>
@@ -145,19 +145,19 @@
         								</div>
         								<ul class="list-group list-group-flush text-center">
         										<li class="list-group-item">
-        												<span class="glyphicon glyphicon-calendar"></span> Séance de 1h
+        												<span class="glyphicon glyphicon-calendar"></span> Séance de 1h00
         										</li>
         										<li class="list-group-item">
         												<span class="glyphicon glyphicon-envelope"></span>3 jours par semaines
         										</li>
         										<li class="list-group-item">
-        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br> non-accompagné
+        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br> libre
         										</li>
         								</ul>
-        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-success" href="#">ACHETER</a> </div>
         						</div>
         				</div>
-        				<div class="col-md-3 card">
+        				<div class="col-md-3 card tarifcard">
         						<div class="panel panel-success">
         								<div class="panel-heading">
         										<h3 class="text-center">Grande <br> formule</h3>
@@ -177,10 +177,10 @@
         												<span class="glyphicon glyphicon-heart"></span>Alimentation <br>accompagné
         										</li>
         								</ul>
-        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-success" href="#">ACHETER</a> </div>
         						</div>
         				</div>
-        				<div class="col-md-3 card">
+        				<div class="col-md-3 card tarifcard">
         						<div class="panel panel-warning">
         								<div class="panel-heading">
         										<h3 class="text-center">Extrat <br> formule</h3>
@@ -200,7 +200,7 @@
         												<span class="glyphicon glyphicon-heart"></span>Alimentation <br> accompagné
         										</li>
         								</ul>
-        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-success" href="#">ACHETER</a> </div>
         						</div>
         				</div>
         		  </div>
@@ -236,7 +236,7 @@
         <div class="row">
 
           <!-- COACH 1 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach1.jpg">
                   <div class="card-block">
@@ -250,14 +250,14 @@
                   </div>
                   <div class="card-footer">
                       <small>Voir les disponibilités</small>
-                      <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                      <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                   </div>
               </div>
           </div>
 
 
           <!-- COACH 2 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach2.jpg">
                   <div class="card-block">
@@ -270,7 +270,7 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                     <small>Voir les disponibilités</small>
                   </div>
               </div>
@@ -279,7 +279,7 @@
 
 
           <!-- COACH 3 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach3.jpg">
                   <div class="card-block">
@@ -292,7 +292,7 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                     <small>Voir les disponibilités</small>
                   </div>
               </div>
@@ -301,7 +301,7 @@
 
 
           <!-- COACH 4 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="../img/coach4.jpg">
                   <div class="card-block">
@@ -314,7 +314,7 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <a class="btn btn-secondary float-right btn-sm" href="tarif.html">Choisir</a>
                     <small>Voir les disponibilités</small>
                   </div>
               </div>
