--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 
           <nav class="navbar navbar-toggleable-md navbar-light bg-faded col-12">
 
-            <button class="navbar-toggler navbar-toggler-right col-2" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right col-2" tabindex="-1" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-10" href="#">Fitness & U</a>
+            <a class="navbar-brand col-10" href="index.html">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/index.html">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pages/tarif.html">Tarifs</a>
@@ -79,13 +79,13 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-md-8" href="#">Fitness & U</a>
+            <a class="navbar-brand col-md-8" href="index.html">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse col-md-3 nav" id="nav-content">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/index.html">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pages/tarif.html">Tarifs</a>
@@ -120,7 +120,7 @@
                     <div class="row">
 
                         <!-- ARTICLE 1 -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 ">
                             <div class="card">
                                 <img class="card-img-top" alt="coach" src="img/desktop/art1.jpg" srcset="img/phone/art1.jpg 400w, img/desktop/art1.jpg 750w" >
                                 <div class="card-block">
@@ -250,7 +250,7 @@
         <div class="row">
 
           <!-- COACH 1 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="img/coach1.jpg">
                   <div class="card-block">
@@ -271,7 +271,7 @@
 
 
           <!-- COACH 2 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="img/coach2.jpg">
                   <div class="card-block">
@@ -293,7 +293,7 @@
 
 
           <!-- COACH 3 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="img/coach3.jpg">
                   <div class="card-block">
@@ -315,7 +315,7 @@
 
 
           <!-- COACH 4 -->
-          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="col-12 col-sm-6 col-md-3">
               <div class="card">
                   <img class="card-img-top" alt="coach" src="img/coach4.jpg">
                   <div class="card-block">
